--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,17 @@ apply plugin: 'java'
 
 version = "0.1"
 
-jar {
-	version = project.version
-	classifier = "dev"
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.25'
+
+    compile 'io.netty:netty-all:4.1.14.Final'
+    compile 'com.github.ben-manes.caffeine:caffeine:2.5.4'
+
+    testCompile 'junit:junit:4.12'
 }
 
 // Source jar
